name:           lc-mongo-wrapper
version:        0.1.0.0
synopsis:       Library for simplified interaction with mongo dtabase in LeChatelier project
description:    Library for simplified interaction with mongo dtabase in LeChatelier project
homepage:       https://github.com/biocad/lc-mongo-wrapper#readme
bug-reports:    https://github.com/biocad/lc-mongo-wrapper/issues
author:         Alexnadr Sadovnikov
maintainer:     sadovnikovav@biocad.ru
copyright:      2017 Alexandr Sadovnikov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.MongoDB.LeChatelier
  other-modules:       Database.MongoDB.LeChatelier.Internal.AesonBsonConverter
                     , Database.MongoDB.LeChatelier.Internal.Interaction
                     , Database.MongoDB.LeChatelier.Internal.Types
  build-depends:       base >=4.7 && <5
                     , aeson
                     , bson
                     , bytestring
                     , deepseq
                     , directory
                     , either
                     , mongoDB
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/biocad/lc-mongo-wrapper
